# global-market-orchestrator

./: .env.example  README.md  pyproject.toml
.github/workflows/: daily-active.yml  daily.yml
docs/: index.html  report.html
docs/assets/: app.js  style.css
docs/reports/: 2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-21.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  index.json
prompts/: cross_analyzer_system.md  global_narrative_system.md
src/: __init__.py  collector.py  config.py  cross_analyzer.py  main.py  models.py  narrative.py  notifier.py  sector_map.py  storage.py
tests/: test_collector.py  test_cross_analyzer.py  test_notifier.py  test_storage.py
