[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-market-orchestrator"
version = "0.1.0"
description = "Daily cross-market orchestrator aggregating Crypto, KOSPI, S&P 500, NASDAQ-100, and Dow 30 research agents into a unified global brief."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.39",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
global-orchestrator = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
